{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 12,
  "lineage": "1e9f32f1-b114-f18f-b2d2-c6e3e0fb0d85",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic",
            "internal_domain_name_suffix": "qoqs41xzs3ku3mla1e24b0otme.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/publicIPAddresses/vm-linuxvm-publicip",
                "subnet_id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/internal"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-52-F3-6A",
            "name": "web-linuxvm-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "myrg-1",
            "virtual_machine_id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Compute/virtualMachines/my-vm"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vm-subent",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic|/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg",
            "network_interface_id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic",
            "network_security_group_id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_network_security_rule.web_vmnic_nsg_rule_inbound",
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vm-subent",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg",
            "location": "eastus",
            "name": "vm-nsg",
            "resource_group_name": "myrg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "22",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/vm-nsg/securityRules/test123",
            "name": "test123",
            "network_security_group_name": "vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "myrg-1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/publicIPAddresses/vm-linuxvm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.186.92.14",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vm-linuxvm-publicip",
            "resource_group_name": "myrg-1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm-subent",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/internal",
            "name": "internal",
            "resource_group_name": "myrg-1",
            "virtual_network_name": "my-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "v-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6e2fa183-97f9-4e55-b160-d939e0e9d364",
            "id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/virtualNetworks/my-vnet",
            "location": "eastus",
            "name": "my-vnet",
            "resource_group_name": "myrg-1",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a2b78e76-466a-445f-9484-cad306fe0404/resourceGroups/myrg-1/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/internal",
                "name": "internal"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}